[workspace]
members = ["mg-core",
    "mg-pipeline",
    "mg-physics",
    "mg-renderer",
    "mg-cli"
]
resolver = "2"

[workspace.dependencies]
bitcoin={version = "0.32.0", features = ["serde"]}
bdk_chain = "0.23.3"
tokio = {version="1.40",features=["full"]}
serde = {version = "1",features = ["derive"]}
crossterm = "0.28.1"


