[package]
name = "mg-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
mg-core = {path = "../mg-core"}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {version="1"}
futures-util={version="0.3"}
tokio-tungstenite = {version = "0.29.0",features = ["rustls-tls-native-roots"]}
